<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_header"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_below="@+id/txt_title"
        android:layout_marginTop="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/chinatsu" />

    <TextView
        android:id="@+id/user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_profile"
        android:layout_below="@+id/txt_title"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@id/img_profile"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/layout_stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_profile"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_profile"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_count"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_post"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follower_count"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_follower"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_count"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_following"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_profile"
        android:layout_marginTop="16dp"
        android:text="@string/bio_txt"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/edit_profile"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_share_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/share_profile"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_buttons"
        android:layout_marginTop="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="#D3D3D3"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="#D3D3D3"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#D3D3D3"
            android:contentDescription="@string/post_image"
            android:scaleType="centerCrop" />
    </LinearLayout>

</RelativeLayout>